[gd_scene format=3 uid="uid://bd48x5jqyuju7"]

[ext_resource type="Script" uid="uid://ds4i0vssxwoag" path="res://scenes/old_terrain/old_terrain.gd" id="1_vjhlg"]
[ext_resource type="Material" uid="uid://b5bnbjcgqujk3" path="res://scenes/old_terrain/terrain_chunk.tres" id="2_5ibnn"]

[node name="Terrain" type="Node3D" unique_id=689841449]
physics_interpolation_mode = 2
script = ExtResource("1_vjhlg")
chunk_material = ExtResource("2_5ibnn")

[node name="ColliderContainer" type="StaticBody3D" parent="." unique_id=1739867373]

[node name="HeightMapSprite" type="Sprite2D" parent="." unique_id=26579761]
texture_filter = 1
centered = false

[node name="NormalMapSprite" type="Sprite2D" parent="." unique_id=2040992155]
texture_filter = 1
position = Vector2(128, 0)
centered = false
